# lox-interpreter

./: Cargo.toml  README.md  test.lox
src/: exprs.rs  main.rs  scanner.rs  tokens.rs  utils.rs
src/evaluate/: evaluate.rs
src/parser/: parser.rs
src/scanner/: tokenize.rs
